package PS.FM;
import "proto/config.proto";

message Config {
  optional DataConfig training_data = 1;
  optional DataConfig validation_data = 2;
  optional int32 k = 3 [default = 5];
  optional double eta_w = 4 [default = .1];
  optional double eta_v = 5 [default = .1];
  optional double lambda_w = 6 [default = 1];
  optional double lambda_v = 7 [default = 1];
  optional int32 minibatch = 8 [default = 10000];
  optional double sigma = 9 [default = .01];
}
